Avoid HeadlessException by mocking AWT Toolkit